--- a/output.css
+++ b/output.css
@@ -588,10 +588,6 @@ video {
   }
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -600,93 +596,28 @@ video {
   position: relative;
 }
 
-.top-full {
-  top: 100%;
+.-left-20 {
+  left: -5rem;
 }
 
 .right-0 {
   right: 0px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .right-10 {
   right: 2.5rem;
 }
 
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.top-\[6\] {
-  top: 6;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
-.top-\[15px\] {
-  top: 15px;
-}
-
-.top-\[10px\] {
-  top: 10px;
-}
-
-.top-\[18px\] {
-  top: 18px;
-}
-
-.top-\[17px\] {
-  top: 17px;
-}
-
-.top-\[22px\] {
-  top: 22px;
+.top-0 {
+  top: 0px;
 }
 
 .top-\[25px\] {
   top: 25px;
 }
 
-.left-10 {
-  left: 2.5rem;
-}
-
-.-left-10 {
-  left: -2.5rem;
-}
-
-.-left-20 {
-  left: -5rem;
-}
-
-.-z-50 {
-  z-index: -50;
-}
-
-.z-50 {
-  z-index: 50;
-}
-
-.z-\[999\] {
-  z-index: 999;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
+.top-full {
+  top: 100%;
 }
 
 .my-3 {
@@ -694,8 +625,9 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mr-4 {
@@ -714,16 +646,24 @@ video {
   display: none;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-12 {
   height: 3rem;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.h-screen {
+  height: 100vh;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-\[120px\] {
+  width: 120px;
 }
 
 .w-\[40px\] {
@@ -736,34 +676,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-\[120px\] {
-  width: 120px;
-}
-
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-\[380px\] {
-  width: 380px;
 }
 
 .max-w-\[320px\] {
@@ -798,12 +710,12 @@ video {
   gap: 1.25rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-xl {
@@ -812,16 +724,6 @@ video {
 
 .border-none {
   border-style: none;
-}
-
-.bg-slate-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-100 {
@@ -838,16 +740,12 @@ video {
   padding: 0.25rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
@@ -874,14 +772,14 @@ video {
   padding-right: 1.25rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
 }
 
 .py-5 {
@@ -889,14 +787,14 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-sm {
@@ -914,17 +812,8 @@ video {
   line-height: 1rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .font-bold {
   font-weight: 700;
-}
-
-.font-normal {
-  font-weight: 400;
 }
 
 .font-medium {
@@ -941,9 +830,9 @@ video {
   color: rgb(115 44 227 / var(--tw-text-opacity, 1));
 }
 
-.text-white {
+.text-slate-500 {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  color: rgb(100 116 139 / var(--tw-text-opacity, 1));
 }
 
 .text-slate-700 {
@@ -951,9 +840,102 @@ video {
   color: rgb(51 65 85 / var(--tw-text-opacity, 1));
 }
 
-.text-slate-500 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.body{
+  font-family: "Manrope", sans-serif;
+}
+
+nav{
+  letter-spacing: 0.7px;
+}
+
+.links{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  z-index: 999;
+}
+
+.lang_selection img{
+  width: 25px;
+  height: 15px;
+}
+
+.option{
+  border: 1px solid gray;
+}
+
+.login_btn{
+  border: 1px solid #732CE3;
+}
+
+.teklif_btn{
+  background: linear-gradient(90deg, rgba(121,53,227,1) 49%, rgba(189,164,230,1) 94%);
+}
+
+.navlinks li ul{
+  border: 1px solid gray;
+  top: 35px;
+  left: 0;
+  z-index: 100;
+}
+
+.navlinks li ul img{
+  display: none;
+}
+
+@media (min-width:1024px){
+  /*<<---NAVIGATION--->>**/
+
+  nav .fa-bars{
+    display: none;
+  }
+
+  .parent_div{
+    justify-content: space-between;
+  }
+
+  .links{
+    position: static;
+    padding: 0;
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    box-shadow: none;
+    height: initial;
+  }
+
+  .navlinks{
+    flex-direction: row;
+    margin: 0;
+    align-items: center;
+  }
+
+  .right_links{
+    display: flex;
+    align-items: center;
+  }
+
+  #valuta{
+    margin: 0;
+  }
+
+  .nav_btns{
+    flex-direction: row;
+    align-items: center;
+    margin-left: 20px;
+  }
+
+  nav .fa-xmark{
+    display: none;
+  }
+
+  .navlinks li ul img{
+    display: initial;
+  }
 }
 
 .hover\:bg-slate-50:hover {
@@ -962,10 +944,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:block {
-    display: block;
-  }
-
   .sm\:w-full {
     width: 100%;
   }
@@ -979,36 +957,12 @@ video {
     -webkit-line-clamp: 2;
   }
 
-  .md\:block {
-    display: block;
+  .md\:w-\[130px\] {
+    width: 130px;
   }
 
   .md\:w-\[200px\] {
     width: 200px;
-  }
-
-  .md\:w-\[350px\] {
-    width: 350px;
-  }
-
-  .md\:w-\[300px\] {
-    width: 300px;
-  }
-
-  .md\:w-\[250px\] {
-    width: 250px;
-  }
-
-  .md\:w-\[180px\] {
-    width: 180px;
-  }
-
-  .md\:w-\[150px\] {
-    width: 150px;
-  }
-
-  .md\:w-\[130px\] {
-    width: 130px;
   }
 
   .md\:max-w-\[400px\] {
@@ -1022,23 +976,8 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:block {
-    display: block;
-  }
-
-  .lg\:hidden {
-    display: none;
-  }
-
   .lg\:w-max {
     width: -moz-max-content;
     width: max-content;
   }
 }
-
-@media (min-width: 1280px) {
-  .xl\:hidden {
-    display: none;
-  }
-}
-
