--- a/output.css
+++ b/output.css
@@ -616,6 +616,10 @@ video {
   top: 25px;
 }
 
+.top-\[280px\] {
+  top: 280px;
+}
+
 .top-full {
   top: 100%;
 }
@@ -702,10 +706,6 @@ video {
   gap: 0.25rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
 }
@@ -716,10 +716,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .border-none {
@@ -780,6 +776,16 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-5 {
@@ -858,6 +864,10 @@ nav{
   z-index: 999;
 }
 
+.right_links{
+  z-index: 998;
+}
+
 .lang_selection img{
   width: 25px;
   height: 15px;
@@ -893,14 +903,10 @@ nav{
     display: none;
   }
 
-  .parent_div{
-    justify-content: space-between;
-  }
-
   .links{
     position: static;
     padding: 0;
-    width: 1000px;
+    width: inherit;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -912,6 +918,10 @@ nav{
     flex-direction: row;
     margin: 0;
     align-items: center;
+  }
+
+  .navlinks li:hover{
+    color: #A271F2;
   }
 
   .right_links{
@@ -965,6 +975,11 @@ nav{
     width: 200px;
   }
 
+  .md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .md\:max-w-\[400px\] {
     max-width: 400px;
   }
@@ -976,8 +991,29 @@ nav{
 }
 
 @media (min-width: 1024px) {
+  .lg\:static {
+    position: static;
+  }
+
   .lg\:w-max {
     width: -moz-max-content;
     width: max-content;
+  }
+
+  .lg\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .lg\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .lg\:p-0 {
+    padding: 0px;
+  }
+
+  .lg\:pr-3 {
+    padding-right: 0.75rem;
   }
 }
