--- a/output.css
+++ b/output.css
@@ -588,6 +588,10 @@ video {
   }
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -598,6 +602,10 @@ video {
 
 .-left-20 {
   left: -5rem;
+}
+
+.left-\[-10px\] {
+  left: -10px;
 }
 
 .right-0 {
@@ -612,8 +620,12 @@ video {
   top: 0px;
 }
 
-.top-\[25px\] {
-  top: 25px;
+.top-\[-12px\] {
+  top: -12px;
+}
+
+.top-\[18px\] {
+  top: 18px;
 }
 
 .top-\[280px\] {
@@ -622,6 +634,27 @@ video {
 
 .top-full {
   top: 100%;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
+.z-\[1000\] {
+  z-index: 1000;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-3 {
@@ -636,6 +669,14 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .block {
@@ -654,6 +695,27 @@ video {
   height: 3rem;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-\[280px\] {
+  height: 280px;
+}
+
+.h-\[2px\] {
+  height: 2px;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -670,6 +732,14 @@ video {
   width: 120px;
 }
 
+.w-\[135px\] {
+  width: 135px;
+}
+
+.w-\[33\%\] {
+  width: 33%;
+}
+
 .w-\[40px\] {
   width: 40px;
 }
@@ -678,12 +748,20 @@ video {
   width: 55px;
 }
 
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .w-full {
   width: 100%;
 }
 
-.max-w-\[320px\] {
-  max-width: 320px;
+.max-w-\[636px\] {
+  max-width: 636px;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -698,6 +776,10 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -706,8 +788,38 @@ video {
   gap: 0.25rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
+.rounded-\[4px\] {
+  border-radius: 4px;
+}
+
+.rounded-\[50\%\] {
+  border-radius: 50%;
 }
 
 .rounded-lg {
@@ -718,8 +830,40 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-\[3px\] {
+  border-width: 3px;
+}
+
 .border-none {
   border-style: none;
+}
+
+.border-\[\#676767\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(103 103 103 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#A271F2\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
+}
+
+.bg-\[\#A271F2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(162 113 242 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#D1D5DB\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-100 {
@@ -758,9 +902,19 @@ video {
   padding-right: 2.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -768,9 +922,19 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .py-2 {
@@ -793,14 +957,57 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[25px\] {
+  font-size: 25px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -826,14 +1033,74 @@ video {
   font-weight: 500;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.tracking-\[0\.1px\] {
+  letter-spacing: 0.1px;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
 .text-\[\#300B60\] {
   --tw-text-opacity: 1;
   color: rgb(48 11 96 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#676767\] {
+  --tw-text-opacity: 1;
+  color: rgb(103 103 103 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#732CE3\] {
   --tw-text-opacity: 1;
   color: rgb(115 44 227 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#A271F2\] {
+  --tw-text-opacity: 1;
+  color: rgb(162 113 242 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#D1D5DB\] {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
 .text-slate-500 {
@@ -851,6 +1118,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.container{
+  width: 90%;
+  margin: auto;
+}
+
 .body{
   font-family: "Manrope", sans-serif;
 }
@@ -861,11 +1133,6 @@ nav{
 
 .links{
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  z-index: 999;
-}
-
-.right_links{
-  z-index: 998;
 }
 
 .lang_selection img{
@@ -896,6 +1163,18 @@ nav{
   display: none;
 }
 
+.header_content h1{
+  line-height: 60px;
+}
+
+.three_cards div{
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.sfr_izle{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
 @media (min-width:1024px){
   /*<<---NAVIGATION--->>**/
 
@@ -904,39 +1183,13 @@ nav{
   }
 
   .links{
-    position: static;
-    padding: 0;
     width: inherit;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
     box-shadow: none;
     height: initial;
   }
 
-  .navlinks{
-    flex-direction: row;
-    margin: 0;
-    align-items: center;
-  }
-
   .navlinks li:hover{
     color: #A271F2;
-  }
-
-  .right_links{
-    display: flex;
-    align-items: center;
-  }
-
-  #valuta{
-    margin: 0;
-  }
-
-  .nav_btns{
-    flex-direction: row;
-    align-items: center;
-    margin-left: 20px;
   }
 
   nav .fa-xmark{
@@ -946,6 +1199,37 @@ nav{
   .navlinks li ul img{
     display: initial;
   }
+
+  .container{
+    width: 1250px;
+  }
+
+  .header_content h1{
+    line-height: 80px;
+  }
+}
+
+.placeholder\:font-semibold::-moz-placeholder {
+  font-weight: 600;
+}
+
+.placeholder\:font-semibold::placeholder {
+  font-weight: 600;
+}
+
+.placeholder\:text-\[\#676767\]::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(103 103 103 / var(--tw-text-opacity, 1));
+}
+
+.placeholder\:text-\[\#676767\]::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(103 103 103 / var(--tw-text-opacity, 1));
+}
+
+.hover\:bg-\[\#51258b\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(81 37 139 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-slate-50:hover {
@@ -953,22 +1237,78 @@ nav{
   background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-violet-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 58 237 / var(--tw-bg-opacity, 1));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.active\:bg-\[\#300B60\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(48 11 96 / var(--tw-bg-opacity, 1));
+}
+
 @media (min-width: 640px) {
+  .sm\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
   .sm\:w-full {
     width: 100%;
+  }
+
+  .sm\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .sm\:text-\[22px\] {
+    font-size: 22px;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:line-clamp-2 {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
+  .md\:left-\[-10px\] {
+    left: -10px;
+  }
+
+  .md\:top-\[-12px\] {
+    top: -12px;
+  }
+
+  .md\:mx-6 {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+
+  .md\:mb-\[153px\] {
+    margin-bottom: 153px;
+  }
+
+  .md\:flex {
+    display: flex;
   }
 
   .md\:w-\[130px\] {
     width: 130px;
+  }
+
+  .md\:w-\[165px\] {
+    width: 165px;
   }
 
   .md\:w-\[200px\] {
@@ -980,13 +1320,28 @@ nav{
     width: fit-content;
   }
 
-  .md\:max-w-\[400px\] {
-    max-width: 400px;
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-\[32px\] {
+    font-size: 32px;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -995,14 +1350,62 @@ nav{
     position: static;
   }
 
+  .lg\:top-\[-10px\] {
+    top: -10px;
+  }
+
+  .lg\:m-0 {
+    margin: 0px;
+  }
+
+  .lg\:mx-\[30px\] {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .lg\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:w-\[185px\] {
+    width: 185px;
+  }
+
+  .lg\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .lg\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .lg\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .lg\:w-\[800px\] {
+    width: 800px;
+  }
+
   .lg\:w-max {
     width: -moz-max-content;
     width: max-content;
   }
 
-  .lg\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
+  .lg\:max-w-\[1000px\] {
+    max-width: 1000px;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
   }
 
   .lg\:gap-3 {
@@ -1013,7 +1416,23 @@ nav{
     padding: 0px;
   }
 
+  .lg\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .lg\:pr-3 {
     padding-right: 0.75rem;
   }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
+
