--- a/output.css
+++ b/output.css
@@ -636,20 +636,12 @@ video {
   top: 100%;
 }
 
-.z-0 {
-  z-index: 0;
-}
-
 .z-20 {
   z-index: 20;
 }
 
 .z-30 {
   z-index: 30;
-}
-
-.z-\[1000\] {
-  z-index: 1000;
 }
 
 .mx-auto {
@@ -667,6 +659,22 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
@@ -675,8 +683,16 @@ video {
   margin-top: 0.25rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -685,6 +701,14 @@ video {
 
 .flex {
   display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -707,10 +731,6 @@ video {
   height: 2px;
 }
 
-.h-\[48px\] {
-  height: 48px;
-}
-
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -726,6 +746,10 @@ video {
 
 .w-2\/3 {
   width: 66.666667%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-\[120px\] {
@@ -760,12 +784,20 @@ video {
   max-width: 636px;
 }
 
+.max-w-\[800px\] {
+  max-width: 800px;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -792,6 +824,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -804,6 +840,12 @@ video {
   gap: 2rem;
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -812,6 +854,10 @@ video {
 
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-\[4px\] {
@@ -838,8 +884,16 @@ video {
   border-width: 1px;
 }
 
+.border-\[1px\] {
+  border-width: 1px;
+}
+
 .border-\[3px\] {
   border-width: 3px;
+}
+
+.border-r-0 {
+  border-right-width: 0px;
 }
 
 .border-none {
@@ -856,6 +910,11 @@ video {
   border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
 }
 
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#A271F2\] {
   --tw-bg-opacity: 1;
   background-color: rgb(162 113 242 / var(--tw-bg-opacity, 1));
@@ -864,6 +923,16 @@ video {
 .bg-\[\#D1D5DB\] {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#FAF4FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 244 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#FAFBFF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 251 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-100 {
@@ -902,11 +971,6 @@ video {
   padding-right: 2.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -920,6 +984,11 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-8 {
@@ -966,12 +1035,20 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
 .pt-\[100px\] {
   padding-top: 100px;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-start {
+  text-align: start;
 }
 
 .text-2xl {
@@ -1053,6 +1130,11 @@ video {
   letter-spacing: 0.025em;
 }
 
+.text-\[\#00B090\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 176 144 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#300B60\] {
   --tw-text-opacity: 1;
   color: rgb(48 11 96 / var(--tw-text-opacity, 1));
@@ -1068,6 +1150,11 @@ video {
   color: rgb(115 44 227 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#94A3B8\] {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#A271F2\] {
   --tw-text-opacity: 1;
   color: rgb(162 113 242 / var(--tw-text-opacity, 1));
@@ -1076,6 +1163,11 @@ video {
 .text-\[\#D1D5DB\] {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .text-blue-600 {
@@ -1116,6 +1208,33 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-\[500ms\] {
+  transition-duration: 500ms;
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .container{
@@ -1175,6 +1294,38 @@ nav{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
+#domenName{
+  border: none;
+  border-left: 1px solid #e2e2e2;
+}
+
+.domen_btn{
+  transform: translateX(-7px);
+}
+
+.plan_card:hover{
+  border: 2px solid red;
+}
+
+.plan_card{
+  box-sizing: border-box;
+}
+
+.selectedPlan{
+  box-shadow: #A271F2 0px 10px 20px, #A271F2 0px 6px 6px;
+  border: 2px solid #A271F2;
+}
+
+.selectedPlan button{
+  background-color: #A271F2;
+  color: white;
+}
+
+.unSelectedPlan button{
+  background-color: transparent;
+  color: #A271F2;
+}
+
 @media (min-width:1024px){
   /*<<---NAVIGATION--->>**/
 
@@ -1227,6 +1378,21 @@ nav{
   color: rgb(103 103 103 / var(--tw-text-opacity, 1));
 }
 
+.placeholder\:text-slate-400::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity, 1));
+}
+
+.placeholder\:text-slate-400::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity, 1));
+}
+
+.hover\:border-\[\#300B60\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(48 11 96 / var(--tw-border-opacity, 1));
+}
+
 .hover\:bg-\[\#51258b\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(81 37 139 / var(--tw-bg-opacity, 1));
@@ -1258,17 +1424,38 @@ nav{
     margin-right: 1rem;
   }
 
+  .sm\:grid {
+    display: grid;
+  }
+
+  .sm\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .sm\:w-full {
     width: 100%;
+  }
+
+  .sm\:max-w-\[120px\] {
+    max-width: 120px;
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .sm\:justify-between {
+    justify-content: space-between;
   }
 
   .sm\:p-6 {
     padding: 1.5rem;
   }
 
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  .sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .sm\:py-10 {
@@ -1276,8 +1463,26 @@ nav{
     padding-bottom: 2.5rem;
   }
 
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .sm\:text-\[22px\] {
     font-size: 22px;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:font-medium {
+    font-weight: 500;
+  }
+
+  .sm\:tracking-\[0\.1px\] {
+    letter-spacing: 0.1px;
   }
 }
 
@@ -1303,6 +1508,10 @@ nav{
     display: flex;
   }
 
+  .md\:w-\[124px\] {
+    width: 124px;
+  }
+
   .md\:w-\[130px\] {
     width: 130px;
   }
@@ -1320,9 +1529,35 @@ nav{
     width: fit-content;
   }
 
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .md\:p-4 {
+    padding: 1rem;
+  }
+
+  .md\:py-\[13px\] {
+    padding-top: 13px;
+    padding-bottom: 13px;
+  }
+
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:text-\[32px\] {
@@ -1358,6 +1593,11 @@ nav{
     margin: 0px;
   }
 
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .lg\:mx-\[30px\] {
     margin-left: 30px;
     margin-right: 30px;
@@ -1369,6 +1609,10 @@ nav{
 
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
   }
 
   .lg\:w-\[185px\] {
@@ -1400,6 +1644,10 @@ nav{
     max-width: 1000px;
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
@@ -1416,6 +1664,10 @@ nav{
     padding: 0px;
   }
 
+  .lg\:p-6 {
+    padding: 1.5rem;
+  }
+
   .lg\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -1428,6 +1680,10 @@ nav{
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .lg\:text-\[42px\] {
+    font-size: 42px;
   }
 
   .lg\:text-xl {
