--- a/input.css
+++ b/input.css
@@ -28,7 +28,9 @@ nav{letter-spacing: 0.7px;}
 .sfr_izle{box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;}
 #domenName{border: none; border-left: 1px solid #e2e2e2;}
 .domen_btn{transform: translateX(-7px);}
-.plan_card:hover{border: 2px solid red;}
+.plan_card:hover{
+    border: 2px solid #A271F2;
+}
 .plan_card{box-sizing: border-box;}
 .selectedPlan{
     box-shadow: #A271F2 0px 10px 20px, #A271F2 0px 6px 6px;
@@ -37,10 +39,6 @@ nav{letter-spacing: 0.7px;}
 .selectedPlan button{
     background-color: #A271F2;
     color: white;
-}
-.unSelectedPlan button{
-    background-color: transparent;
-    color: #A271F2;
 }
 
 @media (min-width:1024px){
