--- a/output.css
+++ b/output.css
@@ -608,12 +608,20 @@ video {
   bottom: -60px;
 }
 
+.bottom-\[14px\] {
+  bottom: 14px;
+}
+
 .left-\[-10px\] {
   left: -10px;
 }
 
 .left-\[10\%\] {
   left: 10%;
+}
+
+.left-\[16px\] {
+  left: 16px;
 }
 
 .right-0 {
@@ -644,32 +652,16 @@ video {
   top: 100%;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.bottom-\[-20px\] {
+  bottom: -20px;
 }
 
-.-top-8 {
-  top: -2rem;
+.bottom-\[-40px\] {
+  bottom: -40px;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.left-\[16px\] {
-  left: 16px;
-}
-
-.bottom-\[16\] {
-  bottom: 16;
-}
-
-.bottom-\[16px\] {
-  bottom: 16px;
-}
-
-.bottom-\[14px\] {
-  bottom: 14px;
+.z-10 {
+  z-index: 10;
 }
 
 .z-20 {
@@ -680,13 +672,18 @@ video {
   z-index: 30;
 }
 
-.z-10 {
-  z-index: 10;
+.m-0 {
+  margin: 0px;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .my-3 {
@@ -699,8 +696,17 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mb-4 {
@@ -725,6 +731,10 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .mt-1 {
@@ -755,16 +765,31 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mb-\[24px\] {
+  margin-bottom: 24px;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
 }
 
 .box-border {
   box-sizing: border-box;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .block {
@@ -787,8 +812,20 @@ video {
   display: none;
 }
 
+.aspect-\[16\/9\] {
+  aspect-ratio: 16/9;
+}
+
 .h-12 {
   height: 3rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .h-\[120px\] {
@@ -807,6 +844,18 @@ video {
   height: 2px;
 }
 
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[60vh\] {
+  height: 60vh;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -820,48 +869,36 @@ video {
   height: 100vh;
 }
 
-.h-\[200px\] {
-  height: 200px;
-}
-
-.h-\[50px\] {
-  height: 50px;
+.h-\[32px\] {
+  height: 32px;
 }
 
 .h-\[220px\] {
   height: 220px;
 }
 
-.h-\[230px\] {
-  height: 230px;
+.max-h-\[300px\] {
+  max-height: 300px;
 }
 
-.h-\[100px\] {
-  height: 100px;
+.max-h-\[250px\] {
+  max-height: 250px;
 }
 
-.h-\[70px\] {
-  height: 70px;
+.max-h-\[200px\] {
+  max-height: 200px;
 }
 
-.h-\[270px\] {
-  height: 270px;
-}
-
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.min-h-\[220px\] {
-  min-height: 220px;
+.min-h-\[56px\] {
+  min-height: 56px;
 }
 
 .w-12 {
   width: 3rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-2\/3 {
@@ -872,12 +909,28 @@ video {
   width: 5rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
 .w-\[120px\] {
   width: 120px;
 }
 
 .w-\[135px\] {
   width: 135px;
+}
+
+.w-\[214px\] {
+  width: 214px;
+}
+
+.w-\[250px\] {
+  width: 250px;
 }
 
 .w-\[300px\] {
@@ -904,49 +957,12 @@ video {
   width: 100%;
 }
 
-.w-\[150px\] {
-  width: 150px;
+.w-\[200px\] {
+  width: 200px;
 }
 
-.w-\[240px\] {
-  width: 240px;
-}
-
-.w-\[250px\] {
-  width: 250px;
-}
-
-.w-\[218px\] {
-  width: 218px;
-}
-
-.w-\[216px\] {
-  width: 216px;
-}
-
-.w-\[214px\] {
-  width: 214px;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.min-w-\[\] {
-  min-width: ;
-}
-
-.min-w-\[200\] {
-  min-width: 200;
-}
-
-.min-w-\[200px\] {
-  min-width: 200px;
-}
-
-.min-w-\[250px\] {
-  min-width: 250px;
+.w-\[414px\] {
+  width: 414px;
 }
 
 .max-w-2xl {
@@ -961,12 +977,20 @@ video {
   max-width: 800px;
 }
 
+.max-w-\[700px\] {
+  max-width: 700px;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-default {
+  cursor: default;
 }
 
 .auto-rows-fr {
@@ -985,10 +1009,6 @@ video {
   flex-wrap: wrap;
 }
 
-.place-items-center {
-  place-items: center;
-}
-
 .items-start {
   align-items: flex-start;
 }
@@ -997,32 +1017,12 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
-.justify-items-start {
-  justify-items: start;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-1 {
@@ -1049,12 +1049,22 @@ video {
   gap: 2rem;
 }
 
-.gap-\[10px\] {
-  gap: 10px;
+.gap-\[8px\] {
+  gap: 8px;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-y-4 {
   row-gap: 1rem;
+}
+
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1081,12 +1091,28 @@ video {
   text-wrap: nowrap;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
 
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+
+.rounded-\[14px\] {
+  border-radius: 14px;
+}
+
+.rounded-\[15px\] {
+  border-radius: 15px;
+}
+
+.rounded-\[30px\] {
+  border-radius: 30px;
 }
 
 .rounded-\[4px\] {
@@ -1117,24 +1143,16 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-\[24px\] {
-  border-radius: 24px;
-}
-
-.rounded-\[14px\] {
-  border-radius: 14px;
-}
-
-.rounded-\[15px\] {
-  border-radius: 15px;
-}
-
-.rounded-\[30px\] {
-  border-radius: 30px;
+.rounded-\[7px\] {
+  border-radius: 7px;
 }
 
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-\[1px\] {
@@ -1145,12 +1163,16 @@ video {
   border-width: 3px;
 }
 
-.border-2 {
+.border-\[2px\] {
   border-width: 2px;
 }
 
 .border-r-0 {
   border-right-width: 0px;
+}
+
+.border-solid {
+  border-style: solid;
 }
 
 .border-none {
@@ -1167,9 +1189,33 @@ video {
   border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
 }
 
+.border-\[\#E4D7FD\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(228 215 253 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#d8d7d7\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(216 215 215 / var(--tw-border-opacity, 1));
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+.border-slate-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\] {
+  border-color: ;
+}
+
+.bg-\[\#996BE4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 107 228 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#A271F2\] {
@@ -1192,6 +1238,11 @@ video {
   background-color: rgb(250 251 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#eee\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 238 238 / var(--tw-bg-opacity, 1));
+}
+
 .bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
@@ -1202,9 +1253,17 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-auto {
+  background-size: auto;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -1232,12 +1291,16 @@ video {
   padding: 0.75rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-1 {
@@ -1273,6 +1336,11 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .py-1 {
@@ -1330,6 +1398,11 @@ video {
   padding-bottom: 10px;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1340,6 +1413,18 @@ video {
 
 .pt-\[100px\] {
   padding-top: 100px;
+}
+
+.pb-\[\.56rem\] {
+  padding-bottom: .56rem;
+}
+
+.pt-\[\.56rem\] {
+  padding-top: .56rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1421,6 +1506,10 @@ video {
   font-weight: 600;
 }
 
+.leading-\[24px\] {
+  line-height: 24px;
+}
+
 .tracking-\[0\.1px\] {
   letter-spacing: 0.1px;
 }
@@ -1441,6 +1530,11 @@ video {
 .text-\[\#300B60\] {
   --tw-text-opacity: 1;
   color: rgb(48 11 96 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#47207E\] {
+  --tw-text-opacity: 1;
+  color: rgb(71 32 126 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#4A2182\] {
@@ -1518,16 +1612,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-\[mainDarkPurple\] {
-  color: mainDarkPurple;
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[mainLightPurpleText\] {
-  color: mainLightPurpleText;
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline-none {
@@ -1563,8 +1651,16 @@ video {
   transition-duration: 500ms;
 }
 
+.duration-200 {
+  transition-duration: 200ms;
+}
+
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .container{
@@ -1670,6 +1766,29 @@ nav{
   transform: scale(1.1);
 }
 
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
 @media (min-width:1024px){
   /*<<---NAVIGATION--->>**/
 
@@ -1736,6 +1855,20 @@ nav{
   color: rgb(148 163 184 / var(--tw-text-opacity, 1));
 }
 
+.hover\:border-\[\]:hover {
+  border-color: ;
+}
+
+.hover\:border-\[\#A271F2\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
+}
+
+.hover\:border-\[\#6938b8\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(105 56 184 / var(--tw-border-opacity, 1));
+}
+
 .hover\:bg-\[\#51258b\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(81 37 139 / var(--tw-bg-opacity, 1));
@@ -1756,6 +1889,16 @@ nav{
   background-color: rgb(124 58 237 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-\[\]:hover {
+  background-color: ;
+}
+
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1771,11 +1914,11 @@ nav{
   background-color: rgb(92 45 167 / var(--tw-bg-opacity, 1));
 }
 
-@media (min-width: 640px) {
-  .sm\:-top-10 {
-    top: -2.5rem;
-  }
+.active\:bg-\[\]:active {
+  background-color: ;
+}
 
+@media (min-width: 640px) {
   .sm\:mx-4 {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -1793,10 +1936,6 @@ nav{
     display: grid;
   }
 
-  .sm\:h-\[230px\] {
-    height: 230px;
-  }
-
   .sm\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
@@ -1804,10 +1943,6 @@ nav{
 
   .sm\:w-full {
     width: 100%;
-  }
-
-  .sm\:w-\[240px\] {
-    width: 240px;
   }
 
   .sm\:max-w-\[120px\] {
@@ -1818,28 +1953,12 @@ nav{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .sm\:justify-between {
     justify-content: space-between;
   }
 
-  .sm\:gap-\[20px\] {
-    gap: 20px;
-  }
-
-  .sm\:rounded-\[30px\] {
-    border-radius: 30px;
-  }
-
   .sm\:p-6 {
     padding: 1.5rem;
-  }
-
-  .sm\:p-4 {
-    padding: 1rem;
   }
 
   .sm\:px-8 {
@@ -1901,8 +2020,8 @@ nav{
     display: flex;
   }
 
-  .md\:h-\[250px\] {
-    height: 250px;
+  .md\:h-\[240px\] {
+    height: 240px;
   }
 
   .md\:w-\[124px\] {
@@ -1926,12 +2045,16 @@ nav{
     width: fit-content;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:w-\[50\%\] {
+    width: 50%;
   }
 
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .md\:min-w-\[414px\] {
+    min-width: 414px;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -1944,10 +2067,6 @@ nav{
 
   .md\:justify-start {
     justify-content: flex-start;
-  }
-
-  .md\:gap-\[24px\] {
-    gap: 24px;
   }
 
   .md\:p-4 {
@@ -2042,6 +2161,10 @@ nav{
     display: flex;
   }
 
+  .lg\:h-\[320px\] {
+    height: 320px;
+  }
+
   .lg\:w-3\/5 {
     width: 60%;
   }
@@ -2085,10 +2208,6 @@ nav{
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2153,12 +2272,25 @@ nav{
 }
 
 @media (min-width: 1280px) {
-  .xl\:grid {
-    display: grid;
+  .xl\:h-\[380px\] {
+    height: 380px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:border-gray-100 {
+    --tw-border-opacity: 1;
+    border-color: rgb(243 244 246 / var(--tw-border-opacity, 1));
   }
 
-  .xl\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .dark\:bg-gray-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
+  }
+
+  .dark\:text-gray-800 {
+    --tw-text-opacity: 1;
+    color: rgb(31 41 55 / var(--tw-text-opacity, 1));
   }
 }
 
