--- a/output.css
+++ b/output.css
@@ -600,10 +600,6 @@ video {
   border-width: 0;
 }
 
-.pointer-events-none {
-  pointer-events: none;
-}
-
 .fixed {
   position: fixed;
 }
@@ -614,10 +610,6 @@ video {
 
 .relative {
   position: relative;
-}
-
-.sticky {
-  position: sticky;
 }
 
 .-left-20 {
@@ -672,16 +664,12 @@ video {
   top: 280px;
 }
 
+.top-\[300px\] {
+  top: 300px;
+}
+
 .top-full {
   top: 100%;
-}
-
-.left-2\/4 {
-  left: 50%;
-}
-
-.top-2\/4 {
-  top: 50%;
 }
 
 .z-10 {
@@ -696,12 +684,12 @@ video {
   z-index: 30;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .z-40 {
   z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .m-0 {
@@ -728,9 +716,18 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .mb-10 {
@@ -813,16 +810,8 @@ video {
   margin-top: 2rem;
 }
 
-.mt-\[150px\] {
-  margin-top: 150px;
-}
-
 .mt-\[30px\] {
   margin-top: 30px;
-}
-
-.mt-px {
-  margin-top: 1px;
 }
 
 .box-border {
@@ -918,10 +907,6 @@ video {
   height: 100vh;
 }
 
-.h-3\.5 {
-  height: 0.875rem;
-}
-
 .w-11 {
   width: 2.75rem;
 }
@@ -998,20 +983,21 @@ video {
   width: 80%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-3\.5 {
-  width: 0.875rem;
-}
-
-.w-\[full\] {
-  width: full;
-}
-
 .max-w-2xl {
   max-width: 42rem;
+}
+
+.max-w-\[456px\] {
+  max-width: 456px;
 }
 
 .max-w-\[636px\] {
@@ -1026,28 +1012,12 @@ video {
   max-width: 800px;
 }
 
-.-translate-x-2\/4 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-2\/4 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.select-none {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
 }
 
 .appearance-none {
@@ -1078,6 +1048,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.place-items-center {
+  place-items: center;
 }
 
 .items-start {
@@ -1120,6 +1094,10 @@ video {
   gap: 1.25rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-8 {
   gap: 2rem;
 }
@@ -1148,8 +1126,8 @@ video {
   overflow: hidden;
 }
 
-.overflow-y-auto {
-  overflow-y: auto;
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 
 .truncate {
@@ -1246,6 +1224,14 @@ video {
   border-width: 3px;
 }
 
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-r-0 {
   border-right-width: 0px;
 }
@@ -1267,6 +1253,11 @@ video {
   border-color: rgb(103 103 103 / var(--tw-border-opacity, 1));
 }
 
+.border-\[\#732CE3\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(115 44 227 / var(--tw-border-opacity, 1));
+}
+
 .border-\[\#A271F2\] {
   --tw-border-opacity: 1;
   border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
@@ -1277,9 +1268,19 @@ video {
   border-color: rgb(228 215 253 / var(--tw-border-opacity, 1));
 }
 
+.border-\[\#c4c2c2\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(196 194 194 / var(--tw-border-opacity, 1));
+}
+
 .border-\[\#d8d7d7\] {
   --tw-border-opacity: 1;
   border-color: rgb(216 215 215 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#e2e2e2\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(226 226 226 / var(--tw-border-opacity, 1));
 }
 
 .border-gray-300 {
@@ -1290,11 +1291,6 @@ video {
 .border-slate-200 {
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
-}
-
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#2bc48a\] {
@@ -1396,6 +1392,10 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-7 {
+  padding: 1.75rem;
 }
 
 .p-8 {
@@ -1510,12 +1510,12 @@ video {
   padding-right: 0.75rem;
 }
 
-.pt-\[100px\] {
-  padding-top: 100px;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
+.pt-\[100px\] {
+  padding-top: 100px;
 }
 
 .pt-\[120px\] {
@@ -1565,6 +1565,10 @@ video {
   font-size: 22px;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
 .text-\[25px\] {
   font-size: 25px;
 }
@@ -1610,8 +1614,20 @@ video {
   font-weight: 600;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
+.leading-\[60px\] {
+  line-height: 60px;
+}
+
 .tracking-\[0\.1px\] {
   letter-spacing: 0.1px;
+}
+
+.tracking-\[0\.7px\] {
+  letter-spacing: 0.7px;
 }
 
 .tracking-tight {
@@ -1640,6 +1656,11 @@ video {
 .text-\[\#300B60\] {
   --tw-text-opacity: 1;
   color: rgb(48 11 96 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#334155\] {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#47207E\] {
@@ -1741,10 +1762,6 @@ video {
   accent-color: #A271F2;
 }
 
-.opacity-0 {
-  opacity: 0;
-}
-
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1754,10 +1771,6 @@ video {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
@@ -1780,12 +1793,6 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-opacity {
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1794,12 +1801,12 @@ video {
   transition-duration: 500ms;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
-}
-
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .container{
@@ -1811,25 +1818,9 @@ video {
   font-family: "Manrope", sans-serif;
 }
 
-nav{
-  letter-spacing: 0.7px;
-}
-
-.links{
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-
 .lang_selection img{
   width: 25px;
   height: 15px;
-}
-
-.option{
-  border: 1px solid gray;
-}
-
-.login_btn{
-  border: 1px solid #732CE3;
 }
 
 .teklif_btn{
@@ -1847,21 +1838,12 @@ nav{
   display: none;
 }
 
-.header_content h1{
-  line-height: 60px;
-}
-
 .three_cards div{
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .sfr_izle{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-}
-
-#domenName{
-  border: none;
-  border-left: 1px solid #e2e2e2;
 }
 
 .domen_btn{
@@ -1879,14 +1861,6 @@ nav{
   color: #94A3B8;
 }
 
-.plan_card:hover{
-  border: 2px solid #A271F2;
-}
-
-.plan_card{
-  box-sizing: border-box;
-}
-
 .selectedPlan{
   box-shadow: #A271F2 0px 10px 20px, #A271F2 0px 6px 6px;
   border: 2px solid #A271F2;
@@ -1895,6 +1869,10 @@ nav{
 .selectedPlan button{
   background-color: #A271F2;
   color: white;
+}
+
+.plan_card:hover{
+  border: 2px solid #A271F2;
 }
 
 .str_img img{
@@ -1994,68 +1972,14 @@ nav{
   color: rgb(148 163 184 / var(--tw-text-opacity, 1));
 }
 
-.before\:absolute::before {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.before\:left-2\/4::before {
-  content: var(--tw-content);
-  left: 50%;
-}
-
-.before\:top-2\/4::before {
-  content: var(--tw-content);
-  top: 50%;
-}
-
-.before\:block::before {
-  content: var(--tw-content);
-  display: block;
-}
-
-.before\:h-8::before {
-  content: var(--tw-content);
-  height: 2rem;
-}
-
-.before\:w-8::before {
-  content: var(--tw-content);
-  width: 2rem;
-}
-
-.before\:-translate-x-2\/4::before {
-  content: var(--tw-content);
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:-translate-y-2\/4::before {
-  content: var(--tw-content);
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:rounded-full::before {
-  content: var(--tw-content);
-  border-radius: 9999px;
-}
-
-.before\:opacity-0::before {
-  content: var(--tw-content);
-  opacity: 0;
-}
-
-.before\:transition-opacity::before {
-  content: var(--tw-content);
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .after\:absolute::after {
   content: var(--tw-content);
   position: absolute;
+}
+
+.after\:left-1\/2::after {
+  content: var(--tw-content);
+  left: 50%;
 }
 
 .after\:right-\[22px\]::after {
@@ -2066,21 +1990,6 @@ nav{
 .after\:top-0\.5::after {
   content: var(--tw-content);
   top: 0.125rem;
-}
-
-.after\:left-\[5px\]::after {
-  content: var(--tw-content);
-  left: 5px;
-}
-
-.after\:top-\[2px\]::after {
-  content: var(--tw-content);
-  top: 2px;
-}
-
-.after\:left-1\/2::after {
-  content: var(--tw-content);
-  left: 50%;
 }
 
 .after\:top-1\/2::after {
@@ -2211,26 +2120,25 @@ nav{
   background-color: rgb(124 58 237 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:text-\[\#844fda\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(132 79 218 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-\[\#A271F2\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(162 113 242 / var(--tw-text-opacity, 1));
+}
+
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:before\:opacity-40:hover::before {
-  content: var(--tw-content);
-  opacity: 0.4;
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .active\:bg-\[\#300B60\]:active {
@@ -2251,10 +2159,6 @@ nav{
 .peer:checked ~ .peer-checked\:bg-\[\#A271F2\] {
   --tw-bg-opacity: 1;
   background-color: rgb(162 113 242 / var(--tw-bg-opacity, 1));
-}
-
-.peer:checked ~ .peer-checked\:opacity-100 {
-  opacity: 1;
 }
 
 .peer:checked ~ .peer-checked\:after\:translate-x-full::after {
@@ -2288,10 +2192,6 @@ nav{
     margin-top: 1.5rem;
   }
 
-  .sm\:grid {
-    display: grid;
-  }
-
   .sm\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
@@ -2303,10 +2203,6 @@ nav{
 
   .sm\:max-w-\[120px\] {
     max-width: 120px;
-  }
-
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:justify-between {
@@ -2372,6 +2268,10 @@ nav{
     margin-bottom: 0px;
   }
 
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
   .md\:mb-\[153px\] {
     margin-bottom: 153px;
   }
@@ -2408,6 +2308,14 @@ nav{
     width: 200px;
   }
 
+  .md\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .md\:w-\[60\%\] {
+    width: 60%;
+  }
+
   .md\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
@@ -2431,6 +2339,14 @@ nav{
 
   .md\:justify-start {
     justify-content: flex-start;
+  }
+
+  .md\:overflow-visible {
+    overflow: visible;
+  }
+
+  .md\:overflow-y-visible {
+    overflow-y: visible;
   }
 
   .md\:p-4 {
@@ -2457,6 +2373,11 @@ nav{
     line-height: 2.5rem;
   }
 
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .md\:text-\[22px\] {
     font-size: 22px;
   }
@@ -2467,6 +2388,10 @@ nav{
 
   .md\:text-\[42px\] {
     font-size: 42px;
+  }
+
+  .md\:text-\[44px\] {
+    font-size: 44px;
   }
 
   .md\:text-base {
@@ -2497,18 +2422,6 @@ nav{
 
   .lg\:absolute {
     position: absolute;
-  }
-
-  .lg\:top-\[-10px\] {
-    top: -10px;
-  }
-
-  .lg\:top-\[-8px\] {
-    top: -8px;
-  }
-
-  .lg\:top-\[-12px\] {
-    top: -12px;
   }
 
   .lg\:top-\[-13px\] {
@@ -2545,12 +2458,12 @@ nav{
     width: 60%;
   }
 
-  .lg\:w-\[185px\] {
-    width: 185px;
-  }
-
   .lg\:w-\[25\%\] {
     width: 25%;
+  }
+
+  .lg\:w-\[250px\] {
+    width: 250px;
   }
 
   .lg\:w-\[30\%\] {
@@ -2580,14 +2493,6 @@ nav{
   .lg\:w-max {
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .lg\:w-\[200px\] {
-    width: 200px;
-  }
-
-  .lg\:w-\[250px\] {
-    width: 250px;
   }
 
   .lg\:max-w-\[1000px\] {
@@ -2666,6 +2571,10 @@ nav{
 @media (min-width: 1280px) {
   .xl\:h-\[380px\] {
     height: 380px;
+  }
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .xl\:items-center {
